--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -5,13 +5,21 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>Welcome to Ionic!</h2>
+  <h1>{{app.nom}} {{app.version}}</h1>
+
+  <ion-item>
+    <ion-label floating>Username</ion-label>
+    <ion-input type="text" [(ngModel)]="app.nom"></ion-input><!--permet le data binding-->
+  </ion-item>
+
+  <ion-item>
+    <ion-label floating>Version</ion-label>
+    <ion-input type="Number" [(ngModel)]="app.version"></ion-input>
+  </ion-item>
+
+<button ion-button color="light" (click)='Clickme()'>Appuyer moi dessus !</button>
   <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
+    {{clickmessage}}
   </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+
 </ion-content>
