--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -17,7 +17,7 @@
     <ion-input type="Number" [(ngModel)]="app.version"></ion-input>
   </ion-item>
 
-<button ion-button color="light" (click)='Clickme()'>Appuyer moi dessus !</button>
+<button ion-button color="light" (click)='Clickme()'>OUI</button>
   <p>
     {{clickmessage}}
   </p>
