--- a/src/pages/geoloc/geoloc.html
+++ b/src/pages/geoloc/geoloc.html
@@ -12,7 +12,8 @@
 
 </ion-header>
 
-
 <ion-content padding>
-
+<h2>Grâce à une technologie avancée, nous pouvons connaître votre position</h2>
+<p>LATITUDE : {{Latitude}}</p>
+<p>LONGITUDE : {{Longitude}}</p>
 </ion-content>
